finished content for quote and show all

--- a/quotes/templates/quotes/quote.html
+++ b/quotes/templates/quotes/quote.html
@@ -8,5 +8,9 @@
 
 <p>This page is brought to you by the letters
   {{letter1}} and {{letter2}} and by the number {{number}}.
+  </br>
+  {{current_quote}}
+  </br>
+  <img src={{current_image}} width=600px>
 </p>
 {% endblock %}
