--- a/quotes/templates/quotes/base.html
+++ b/quotes/templates/quotes/base.html
@@ -19,6 +19,7 @@
                 <li><a href="/hw/about">About</a></li> -->
       <li><a href="{% url 'quote' %}">Quote</a></li>
       <li><a href="{% url 'about' %}">About</a></li>
+      <li><a href="{% url 'show_all' %}">Show All</a></li>
     </ul>
   </nav>
 
