Created quotes app

--- a/quotes/templates/quotes/about.html
+++ b/quotes/templates/quotes/about.html
@@ -4,7 +4,18 @@
 {% block content %}
 <h1>About</h1>
 <p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eveniet harum id soluta voluptatum repudiandae tenetur
-  ducimus. Reiciendis voluptates facere, tempora praesentium similique alias molestias maxime repellat quae ipsum amet.
+  Jung Jungkook is a famous korean singer from the boy group BTS (Beyond The Scenes). Born on September 1, 1997 in
+  Busan, South Korea.
+  He chose BigHit Entertainment (now called Hybe), because of Kim Namjoon (RM leader of BTS). At the time BigHit
+  entertainment was not as big as it is now. When BTS
+  were still training and when they debuted, they were on the evrge of bankrupty. The unexpected rise of fame of BTS not
+  only saved the company
+  from bankruptcy, but launched the company to teh same success and status as the established big 3 kpop companies.
+
+  In 2023 Jungkook debuted as a Solo artist with his solo single "Seven", later the same he relased his solo album
+  "Golden". During which he
+  filmed a solo documentary on his journey of creating his first solo single and album called "JUNGKOOK: I AM STILL". In
+  December of 2023 he enlisted in the korean military for
+  his mandatory military service and will be done on June 11,2025.
 </p>
 {% endblock %}
