--- a/quotes/templates/quotes/base.html
+++ b/quotes/templates/quotes/base.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-  <title>Hello, world!</title>
+  <title>Jungkook Quotes</title>
   <!-- <link rel="stylesheet" href="/static/styles.css"> -->
   <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
