--- a/quotes/templates/quotes/show_all.html
+++ b/quotes/templates/quotes/show_all.html
@@ -1,15 +1,29 @@
 {% extends 'quotes/base.html' %}
 
 {% block content %}
-<p>test
-  </br>
-  all photos </br>
-  <img src={{pic_1}} width=400px>
-  <img src={{pic_2}} width=400px>
-  <img src={{pic_3}} width=400px>
-  <img src={{pic_4}} width=400px>
-  </br>
-  all quotes </br>
-  {{quote_1}} {{quote_2}} {{quote_3}} {{quote_4}}
+<p>
+<table>
+  <tr>
+    <th> All Photos</th>
+    <th>All Quotes</th>
+  </tr>
+  <tr>
+    <td><img src={{pic_1}} width=400px></td>
+    <td>{{quote_1}}</td>
+  </tr>
+  <tr>
+    <td><img src={{pic_2}} width=400px></td>
+    <td>{{quote_2}}</td>
+  </tr>
+  <tr>
+    <td><img src={{pic_3}} width=400px></td>
+    <td>{{quote_3}}</td>
+  </tr>
+  <tr>
+    <td><img src={{pic_4}} width=400px></td>
+    <td>{{quote_4}}</td>
+  </tr>
+
+</table>
 </p>
 {% endblock %}
