--- a/static/styles.css
+++ b/static/styles.css
@@ -1,18 +1,32 @@
 body {
-  background-color: slategray;
-  color: white;
+  background-color: rgb(36, 46, 70);
+  color: rgb(218, 221, 255);
+  padding-left: 30vh;
+  padding-right: 30vh;
+  font-size: large;
+  text-align: center;
 }
 
 
 div {
   color: white;
   border: 2px solid darkblue;
+
   padding: 10px;
   margin: 25px;
 }
 
 table {
   border: 1px solid white;
+}
+
+.quote {
+  font-size: x-large;
+  border: 0px;
+}
+
+th {
+  font-size: larger;
 }
 
 td {
