changed the name of file to match gradescope

--- a/mini_fb/templates/mini_fb/show_all_profiles.html
+++ b/mini_fb/templates/mini_fb/show_all_profiles.html
@@ -16,7 +16,8 @@
     <img src="{{p.image_url}}" alt="{{p.image_url}}">
     <p>
       {{p.city}} </br>
-      {{p.email}}
+      {{p.email}} </br>
+
     </p>
   </article>
   {% endfor %}
