--- a/mini_fb/templates/mini_fb/show_all_profiles.html
+++ b/mini_fb/templates/mini_fb/show_all_profiles.html
@@ -1,7 +1,7 @@
-<!-- blog/templates/blog/show_all.html -->
+<!-- mini_fb/templates/mini_fb/show_all.html -->
 {% extends 'mini_fb/base.html' %}
 
-<!-- display a context variable called articles -->
+<!-- display a context variable called profiles -->
 <!--{{articles}}-->
 
 
