--- a/mini_fb/templates/mini_fb/base.html
+++ b/mini_fb/templates/mini_fb/base.html
@@ -1,4 +1,6 @@
-<!-- mini_fb/templates/mini_fb/base.html -->
+<!-- mini_fb/templates/mini_fb/base.html 
+ bu email: myichen@bu.edu
+ Base html for the other templates -->
 {% load static %}
 <html>
 
