--- a/blog/templates/blog/show_all.html
+++ b/blog/templates/blog/show_all.html
@@ -1,26 +1,27 @@
-<!-- blog/templates/blog/show_all.html -->
-
+<!-- templates/show_all.html -->
 {% extends 'blog/base.html' %}
-
-<!-- display a context variable called articles -->
-<!--{{articles}}-->
-
-
-
-{% block content%}
-<h1> Show all articles</h1>
-<main class="grid-container"><!--<div>-->
+<h1>Showing all Articles</h1>
+<!-- scriptlet code to display the value of the variable `articles` 
+{{ articles }}
+-->
+{% block content %}
+<main class="grid-container">
   {% for a in articles %}
+  <article>
+    {% if a.image_url %}
+    <a href="{% url 'article' a.pk %}">
+      <img src="{{a.image_url}}" alt="{{a.image_url}}">
+    </a>
+    {% endif %}
 
-  <article><!--<div>-->
-    <h2>{{a.title}}</h2>
-    <h3>by {{a.author}} at {{a.published}}</h3>
-
-    <img src="{{a.image_url}}" alt="{{a.image_url}}">
-    <p>
-      {{a.text}}
-    </p>
+    <div>
+      <h2><a href="{% url 'article' a.pk %}">{{a.title}}</a></h2>
+      <strong>by {{a.author}} at {{a.published}}</strong>
+      <p>
+        {{a.text}}
+      </p>
+    </div>
   </article>
   {% endfor %}
 </main>
-{% endblock%}
+{% endblock %}
