--- a/mini_fb/templates/mini_fb/show_all_profiles.html
+++ b/mini_fb/templates/mini_fb/show_all_profiles.html
@@ -1,4 +1,5 @@
-<!-- mini_fb/templates/mini_fb/show_all.html -->
+<!-- mini_fb/templates/mini_fb/show_all.html
+ bu email: myichen@bu.edu -->
 {% extends 'mini_fb/base.html' %}
 
 <!-- display a context variable called profiles -->
@@ -7,19 +8,29 @@
 
 
 {% block content%}
-<h1> Show all Profiles</h1>
-<main class="grid-container"><!--<div>-->
-  {% for p in Profiles %}
 
-  <article><!--<div>-->
-    <h2>{{p.first_name}} {{p.last_name}}</h2>
-    <img src="{{p.image_url}}" alt="{{p.image_url}}">
-    <p>
-      {{p.city}} </br>
-      {{p.email}} </br>
+<body>
+  <h1> Show all Profiles</h1>
+  <main class="grid-container"><!--<div>-->
 
-    </p>
-  </article>
-  {% endfor %}
-</main>
+    {% for p in Profiles %}
+
+    <article><!--<div>-->
+      <a href="{% url 'show_profile' p.pk %}">
+        <h2>{{p.first_name}} {{p.last_name}}</h2>
+      </a>
+      <div class="crop">
+        <a href="{% url 'show_profile' p.pk %}">
+          <img src="{{p.image_url}}" alt="{{p.image_url}}">
+        </a>
+      </div>
+      <p>
+        {{p.city}} </br>
+        {{p.email}} </br>
+
+      </p>
+    </article>
+    {% endfor %}
+  </main>
+</body>
 {% endblock%}
