--- a/static/styles-mini_fb.css
+++ b/static/styles-mini_fb.css
@@ -6,13 +6,28 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.crop {
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
+}
+
+.crop img {
+  width: 400px;
+  margin: -40px 0 0px -60px;
+}
+
 ul,
 li {
   padding: 0px;
   list-style-type: none;
 }
 
-h1,
+h1 {
+  text-align: center;
+  color: #ffffff;
+}
+
 h3 {
   color: #ffffff;
 }
