--- a/mini_fb/templates/mini_fb/base.html
+++ b/mini_fb/templates/mini_fb/base.html
@@ -11,7 +11,16 @@
 
 <body>
   <header>
-    <h1>Mini_fb</h1>
+    <a href="{% url 'show_all_profiles' %}">
+      <h1>Mini_fb</h1>
+    </a>
+
+    <div class="centering_text">
+      <a href="{% url 'create_profile' %}">
+        <h3>Create Profile</h3>
+      </a>
+
+    </div>
   </header>
 
   {% block content %}
