finished task 1 for assignment 7

--- a/blog/templates/blog/create_article_form.html
+++ b/blog/templates/blog/create_article_form.html
@@ -1,10 +1,10 @@
-<!-- blog/templates/blog/create_comment_form.html -->
+<!-- blog/templates/blog/create_article_form.html -->
 
 {% extends 'blog/base.html' %}
 
 {% block content %}
 
-<h2> Create a Comment about {{article.title}}</h2>
+<h2> Create a new Article</h2>
 
 
 <form method="POST">
@@ -15,10 +15,10 @@
 
     <tr>
       <td></td>
-      <td><input type="submit" name="submit" value="Create Comment"></td>
-    </tr>
-    </tr>
-  </table>
+      <td><input type="submit" name="submit" value="Create Article"></td>
+</form>
+<form></form>
+</table>
 </form>
 
 
