--- a/mini_fb/templates/mini_fb/show_profile.html
+++ b/mini_fb/templates/mini_fb/show_profile.html
@@ -28,6 +28,12 @@
       <p>
         {{m.message}}
       </p>
+      <!-- Display associated images -->
+      {% for img in m.get_images %}
+      <div>
+        <img src="{{ img.image_file.url }}" alt="Image for status" width="300px">
+      </div>
+      {% endfor %}
       <strong> {{m.profile}} at {{m.timestamp}}</strong>
 
     </div>
@@ -35,6 +41,7 @@
     {% else %}
     <p> No Status Messages yet</p>
     {% endif %}
+
   </div>
 </main>
 {% endblock%}
