--- a/mini_fb/templates/mini_fb/create_status_form.html
+++ b/mini_fb/templates/mini_fb/create_status_form.html
@@ -5,12 +5,16 @@
 {% block content %}
 <h1>Create a Status Message {{profile.first_name}} {{profile.last_name}}</h1>
 <div class='center'>
-  <form method='POST'>
+  <form method='POST' enctype="multipart/form-data">
     <!-- show this first -->
 
     <table>
       <!-- creates form as table -->
       {{form.as_table}}
+      <tr>
+        <td><strong>Upload Image(s):</strong></td>
+        <td><input type="file" name="files" multiple></td>
+      </tr>
       <tr>
         <td></td>
         <td><input type="submit" name="submit" value="Create Status Message"></td>
