--- a/mini_fb/templates/mini_fb/update_profile_form.html
+++ b/mini_fb/templates/mini_fb/update_profile_form.html
@@ -1,3 +1,7 @@
+<!-- 
+ mini_fb/templates/mini_fb/update_profile_form.html
+ myichen@bu.edu
+ -->
 {% extends 'mini_fb/base.html' %}
 
 {% block content%}
