added a newsfeed fr mini_fb

--- a/mini_fb/templates/mini_fb/show_all_profiles.html
+++ b/mini_fb/templates/mini_fb/show_all_profiles.html
@@ -10,7 +10,7 @@
 {% block content%}
 
 <body>
-  <h1> Show all Profiles</h1>
+  <h1> All Profiles</h1>
   <main class="grid-container"><!--<div>-->
 
     {% for p in Profiles %}
