--- a/mini_fb/templates/mini_fb/friend_suggestions.html
+++ b/mini_fb/templates/mini_fb/friend_suggestions.html
@@ -27,7 +27,10 @@
           {% endif %}
           <p>{{ suggestion.first_name }} {{ suggestion.last_name }}</p>
           <!-- Link to add the suggested friend -->
-          <a href="{% url 'add_friend' profile.pk suggestion.pk %}">Add Friend</a>
+          <form action="{% url 'add_friend' suggestion.pk %}" method="post">
+            {% csrf_token %}
+            <button type="submit">Add Friend</button>
+          </form>
         </div>
       </div>
       {% endfor %}
