--- a/mini_fb/templates/mini_fb/show_profile.html
+++ b/mini_fb/templates/mini_fb/show_profile.html
@@ -16,7 +16,7 @@
 
     </p>
     {% if user.is_authenticated and user == Profile.user %}
-    <h2><a href="{% url 'update_profile' Profile.pk %}">Update Profile</a></h2>
+    <h2><a href="{% url 'update_profile'%}">Update Profile</a></h2>
     {% endif %}
   </article>
 
@@ -24,13 +24,13 @@
     <!-- Link to view the news feed -->
     {% if user.is_authenticated and user == Profile.user %}
     <p>
-      <a href="{% url 'news_feed' Profile.pk %}">See News Feed</a>
+      <a href="{% url 'news_feed'%}">See News Feed</a>
     </p>
     {% endif %}
 
     <h2>Status Messages</h2>
     {% if user.is_authenticated and user == Profile.user %}
-    <a href="{% url 'create_status' Profile.pk%}">Create a Status Message</a>
+    <a href="{% url 'create_status'%}">Create a Status Message</a>
     {% endif %}
     {% if Profile.get_message %}
     <!-- call the get_comments method on the article object -->
@@ -66,7 +66,7 @@
     <!-- Link to view friend suggestions -->
     {% if user.is_authenticated and user == Profile.user %}
     <p>
-      <a href="{% url 'friend_suggestions' Profile.pk %}">See Friend Suggestions</a>
+      <a href="{% url 'friend_suggestions'%}">See Friend Suggestions</a>
     </p>
     {% endif %}
 
