--- a/voter_analytics/templates/voter_analytics/voters.html
+++ b/voter_analytics/templates/voter_analytics/voters.html
@@ -2,6 +2,15 @@
 {% block content %}
 <div class="container">
   <h1>Voters</h1>
+  <!-- Filtering form -->
+  <div class="row">
+    <form method="get" action=".">
+      {{ form.as_p }}
+      <button type="submit">Filter</button>
+    </form>
+  </div>
+
+  <!-- Voter listing -->
   <div class="row">
     <table>
       <tr>
@@ -16,7 +25,8 @@
       {% for v in voters %}
       <tr>
         <td>{{v.first_name}} {{v.last_name}}</a></td>
-        <td>{{v.residential_street_number}} {{v.residential_street_name}} Apartment:{{v.residential_apartment_number}},
+        <td>{{v.residential_street_number}} {{v.residential_street_name}} Apartment #:
+          {{v.residential_apartment_number}},
           {{v.residential_zip_code}}</td>
         <td>{{v.date_of_birth}}</td>
         <td>{{v.party_affiliation}}</td>
@@ -27,6 +37,26 @@
 
     </table>
 
+  </div>
+  <div class="row">
+    {% if is_paginated %}
+    <ul class="pagination">
+      {% if page_obj.has_previous %}
+      <li>
+        <span><a href="?page={{ page_obj.previous_page_number }}">Previous</a></span>
+
+      </li>
+      {% endif %}
+      <li class="">
+        <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.</span>
+      </li>
+      {% if page_obj.has_next %}
+      <li>
+        <span><a href="?page={{ page_obj.next_page_number }}">Next</a></span>
+      </li>
+      {% endif %}
+    </ul>
+    {% endif %}
   </div>
 </div>
 
