--- a/project/templates/project/create_user_and_profile_form.html
+++ b/project/templates/project/create_user_and_profile_form.html
@@ -1,3 +1,6 @@
+<!-- project/templates/project/create_user_and_profile_form.html 
+ bu email: myichen@bu.edu
+ Base html for the other templates -->
 {% extends 'project/base.html' %}
 
 {% block content %}
