--- a/project/templates/project/base.html
+++ b/project/templates/project/base.html
@@ -30,6 +30,7 @@
         <li><a href="{% url 'login' %}">Login</a></li>
         <li><a href="{% url 'create profile dragon' %}"> Create Account</a></li>
         {% endif %}
+        <li><a href="{% url 'About' %}"> About</a></li>
       </ul>
     </nav>
     <a href="{% url 'Show_All_Dragons' %}">
